# Eclipce

./: .env  .gitignore  LICENSE  README.md  a.java  config.py  main.py  pyproject.toml  run_tests.py  test.py
core/api_v1/health/: __init__.py  schemas.py  views.py
core/api_v1/keys/asym_keys/: __init__.py  schemas.py  utils.py  views.py
core/api_v1/keys/sym_keys/: __init__.py  schemas.py  utils.py  views.py
core/api_v1/registration/: __init__.py  models.py  views.py
core/api_v1/sign_in/: __init__.py  utils.py  views.py
core/api_v1/sign_up/: __init__.py  schemas.py  utils.py  views.py
core/api_v1/token_auth/: __init__.py  oauth2.py  schemas.py  utils.py  views.py
core/async_database/: __init__.py  db_crud.py  db_engine.py  db_models.py
core/async_databases/async_redis/: __init__.py  db_engine.py  utils.py
core/async_databases/async_sql/: __init__.py  db_crud.py  db_engine.py  db_models.py
core/gnupg/: __init__.py  gnupg_config.py  gnupg_manager.py
exceptions/: token_exceptions.py  user_exceptions.py
front-end/: encrypting.js  package-lock.json  package.json  utils.js
front-end/login-page/: login.html  login.js  register.js  style.css  styles.css
front-end/registration-page/: register.html  register.js  styles.css
registration-page/: register.html  register.js  style.css
sql_hooks/: .env  __init__.py  db_engine.py  db_models.py  db_requests.py
tests/sign_up_tests/: main_tests.py
tests/token_auth_tests/: main_tests.py
